namespace CardGameEngine.GameSystems.Effects
{
    public enum EffectType
    {
        Artefact,
        Keyword,
        Card
    }
}