namespace CardGameEngine.GameSystems.Targeting
{
    public enum TargetTypes
    {
        Player,
        Card
    }
}