@startuml
'Les champs ayant le stéréotype <<property>> sont des propriétés C#

'potentiellement inclure les deux
!include CardsClassDiagram.puml

class Exception

package GameSystems{

package Effects{
class Effect{
+ <<property>> EffectType: EffectType {readOnly}
+ <<property>> EffectId : string {readOnly}
- Script : Script {readOnly}
+ DoEffect(in theGame: Game): bool
+ Effect(in effectType: EffectType, in effectId: string, in targets: Target[0..*])
}

class EffectsDatabase{
- _effectDictionary : Dictionary<string, Effect>
- LoadEffect(in path: string, in type: EffectType)
- LoadAllEffects(in path: string, int type:EffectType)
+ LoadAllEffects(in path: string)
}

enum EffectType{
    Artefact
    Keyword
    Card
}

class InvalidEffectException extends Exception {
- _effectId : string {readOnly}
- _effectType : EffectType {readOnly}
+ InvalidEffectException(in effectId: string, in effectType: EffectType)
}
Effect .r. EffectType
}


class Player{
+ <<property>> Deck: CardPile
'+ <<property>> Artefacts: Artefact[2] {readOnly}
+ <<property>> Name: string {readOnly}
+ <<property>> Hand : CardPile
+ <<property>> ActionPoints : EventProperty<Player, int, ActionPointEditEvent> {readOnly}
+ <<property>> Discard : DiscardPile

+ DrawCard(in theCard?: Card = null)
+ PrepareCardUpgrade(in theCard: Card)
+ LoopDeck()
+ DiscardCard(in theCard: Card)

}

Player "2" *-- "1" Artefact : <<property>> Artefacts {readOnly}

package Targeting{

class Target{
+ <<property>> TargetType : TargetTypes {readOnly}
+ <<property>> IsAutomatic : bool {readOnly}
+ <<property>> Name: string {readOnly}
- _cardFilter: Closure? {readOnly}

+ Target(in name: string, in targetType: TargetType, in isAutomatic: bool, in cardFilter: Closure? = null)
+ IsValidTarget(in card: Card) : bool
}
Effect "1" *-- "0..*" Target : <<property>> AllTargets {readOnly}


enum TargetTypes{
    Player
    Card
}
Target .r. TargetTypes
}
}

class Game{

+ <<property>> CurrentPlayerTurn: Player {readOnly}
+ <<property>> EventManager: EventManager {readOnly}
+ <<property>> EffectsDatabase: EffectsDatabase {readOnly}

+ CheckHasWon(in playerToCheck: Player) : bool
+ StartPlayerTurn(in player: Player)
+ FinishTurn(in player: Player)
+ CanBePlayed(in by: Player, in theCard: Card) : bool
+ PlayCard(in thePlayer: Player, in theCard: Card)
+ ActivateArtifact(in thePlayer: Player, in theArtefact: Artefact)
}



Player "1" --d-* "1" Game: <<property>> Player1 {readOnly}
Player "1" --d-* "1" Game: <<property>> Player2 {readOnly}


'pour palacer GameSystems en haut
GameSystems -[hidden]d--> Cards


@enduml